[package]
name = "chroma-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
palette = "0.7.6"
serde = "1.0.202"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
