[package]
name = "chroma-wasm"
description = "Logic behind chroma color extraction from images"
repository = "https://github.com/reeves-48777/chroma-wasm"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
palette = "0.7.6"
rand = "0.8.5"
getrandom = {version = "0.2.15", features=["js"]}
serde = "1.0.202"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
